tests/semantic_errors/andrei14_6.tl
require"ifj21"

-- wrong arithm types
function main()
    local id : integer = 3.789//6
end

main()
